test/expect/cmd.gccxml-twice-stderr.txt
^error: '--castxml-gccxml' may be given at most once!

Usage: castxml .*$
